SERVER-45883 fix index build protocol check in createIndexes